--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -36,12 +36,94 @@ input {
   line-height: normal;
 }
 
+ul {
+  list-style-type: none;
+}
+
 a {
   color: inherit;
 }
 
 section[id] {
   scroll-margin-top: 30px;
+}
+
+.full-width-header .rs-header {
+  position: fixed;
+}
+
+.rs-header {
+  width: 100%;
+  left: 0;
+  right: 0;
+  top: 0;
+  z-index: 10;
+}
+
+.main-menu .row {
+  height: 100px;
+}
+.main-menu .row .logo-area a img {
+  width: 100%;
+  height: 100%;
+}
+
+.rs-menu {
+  float: right;
+}
+
+.nav-menu {
+  text-align: center;
+  margin-bottom: 0;
+}
+.nav-menu li {
+  display: inline-block;
+  position: relative;
+}
+.nav-menu li a {
+  padding: 15px 50px 15px;
+  display: block;
+  text-align: center;
+  text-decoration: none;
+  font-size: 20px;
+  color: #1c1c1d;
+  font-weight: 600;
+}
+
+.slider-area {
+  position: relative;
+}
+.slider-area img {
+  width: 100%;
+  height: 950px;
+}
+
+.slider-content {
+  position: absolute;
+  width: 100%;
+  left: 0;
+  top: 50%;
+  transform: translateY(-50%);
+}
+
+.display-table-cell p {
+  font-size: 30px;
+  font-weight: 500;
+}
+.display-table-cell h1 {
+  font-size: 50px;
+  color: #ffab00;
+}
+.display-table-cell a {
+  margin-top: 50px;
+  display: inline-block;
+  padding: 20px 40px;
+  background-color: #ffab00;
+  text-decoration: none;
+  color: #1c1c1d;
+  font-size: 20px;
+  font-weight: 700;
+  border-radius: 5px;
 }
 
 /*# sourceMappingURL=style.css.map */
