--- a/assets/sass/_variables.scss
+++ b/assets/sass/_variables.scss
@@ -8,4 +8,4 @@ $primary-font: "Montserrat", sans-serif;
 $gray-dark: #242424;
 $white: #ffffff;
 $yellow: #ffab00;
-$dark: #000000;
+$dark: #1c1c1d;
