--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -7,3 +7,7 @@ Main Color : #ffab00
 @import "variables";
 @import "base";
 @import "header";
+@import "about";
+@import "services";
+@import "block-content";
+@import "strengths";
