--- a/assets/sass/_services.scss
+++ b/assets/sass/_services.scss
@@ -1,30 +1,84 @@
-#services {
+#services-area {
   padding: 150px 0;
   background-color: #f8f8f8;
 }
-.services-icon {
-  margin-right: 20px;
+.services-heading {
+  & span {
+    color: $yellow;
+    font-size: 24px;
+    font-weight: 600;
+    text-transform: uppercase;
+  }
+  & .service-title {
+    padding-top: 20px;
+    padding-bottom: 50px;
+    font-weight: 600;
+    letter-spacing: 1px;
+  }
 }
-.services-content {
-  width: 100%;
-  & .services-title {
-    margin-top: -10px;
-    font-weight: 900;
-    line-height: 42px;
-  }
-  & .services-text {
-    opacity: 0.9;
-    line-height: 24px;
-  }
-  & ul {
-    margin-bottom: 0;
-    padding: 20px 0 0 0;
-    & li {
-      margin-bottom: 16px;
-      & a {
-        text-decoration: none;
-        font-weight: 700;
+.service-item {
+  & .item {
+    padding: 50px 30px;
+    box-shadow: 0 15px 55px -5px rgb(9 31 67 / 10%);
+    background: #ffffff;
+    & h4 {
+      font-weight: 600;
+      margin-bottom: 35px;
+    }
+    & i {
+      display: inline-block;
+      font-size: 70px;
+      margin-bottom: 30px;
+      color: $yellow;
+      background: linear-gradient(
+        90deg,
+        rgba(3, 25, 65, 1) 0%,
+        rgb(255, 171, 0) 100%
+      );
+      -webkit-text-fill-color: transparent;
+      -webkit-background-clip: text;
+    }
+    & p {
+      color: #666666;
+      margin: 0 0 15px;
+      text-transform: none;
+      font-weight: 400;
+    }
+    & a {
+      display: inline-block;
+      text-align: center;
+      color: $yellow;
+      margin-top: 15px;
+      border: 1px solid #e7e7e7;
+      padding: 20px 35px;
+      border-radius: 30px;
+      font-weight: 600;
+      text-decoration: none;
+      position: relative;
+      z-index: 1;
+      overflow: hidden;
+      &:hover {
+        outline: none;
+        &::after {
+          left: 0;
+        }
       }
     }
+  }
+}
+.btn-standard {
+  &:hover {
+    color: $white !important;
+  }
+  &::after {
+    position: absolute;
+    content: "";
+    height: 100%;
+    width: 100%;
+    background: $yellow;
+    transition: all 0.35s ease-in-out;
+    left: -100%;
+    bottom: 0;
+    z-index: -1;
   }
 }
