--- a/assets/sass/_strengths.scss
+++ b/assets/sass/_strengths.scss
@@ -6,13 +6,13 @@
 }
 .timetab-heading {
   height: 100%;
-  margin-right: 38px;
   padding: 20px;
   border: 1px solid #e6e6e6;
   border-radius: 5px;
   text-align: center;
   & i {
     font-size: 46px;
+    color: $yellow;
   }
   & p {
     margin-top: 20px;
@@ -21,34 +21,36 @@
   }
 }
 .tab {
-  & .timetab-heading {
-    position: relative;
-    margin-right: 38px;
-    padding: 20px;
-    border: 1px solid $white;
-    border-radius: 5px;
-    text-align: center;
-    & i {
-      font-size: 46px;
-    }
-    & p {
-      margin-top: 20px;
-    }
-    &:first-of-type {
-      border-color: transparent;
-      box-shadow: 7px 6px 30px rgb(0 0 0 / 12%);
-      &::before {
-        content: "";
-        position: absolute;
-        width: 26px;
-        left: 50%;
-        bottom: -12px;
-        z-index: 1;
-        height: 26px;
-        background: $white;
-        border-radius: 5px;
-        transform: rotate(45deg);
-        margin-left: -13px;
+  cursor: pointer;
+  &.active {
+    & .timetab-heading {
+      position: relative;
+      padding: 20px;
+      border: 1px solid $white;
+      border-radius: 5px;
+      text-align: center;
+      & i {
+        font-size: 46px;
+      }
+      & p {
+        margin-top: 20px;
+      }
+      &:first-of-type {
+        border-color: transparent;
+        box-shadow: 7px 6px 30px rgb(0 0 0 / 12%);
+        &::before {
+          content: "";
+          position: absolute;
+          width: 26px;
+          left: 50%;
+          bottom: -12px;
+          z-index: 1;
+          height: 26px;
+          background: $white;
+          border-radius: 5px;
+          transform: rotate(45deg);
+          margin-left: -13px;
+        }
       }
     }
   }
@@ -57,10 +59,14 @@
 .timetab-data {
   margin-top: 50px;
   & .timetab-container {
-    border-radius: 5px;
-    box-shadow: 7px 6px 30px rgb(0 0 0 / 12%);
-    background: #ffffff;
-    padding: 30px;
+    display: none;
+    &.active {
+      border-radius: 5px;
+      box-shadow: 7px 6px 30px rgb(0 0 0 / 12%);
+      background: #ffffff;
+      padding: 30px;
+      display: block;
+    }
     & .timetab-img {
       margin-left: 125px;
       width: 445px;
