--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -11,3 +11,5 @@ Main Color : #ffab00
 @import "services";
 @import "block-content";
 @import "strengths";
+@import "technology";
+@import "contact";
