--- a/assets/sass/_contact.scss
+++ b/assets/sass/_contact.scss
@@ -32,6 +32,87 @@
       min-height: 150px;
       width: 100%;
       resize: none;
+      border: none;
+      box-shadow: inherit;
     }
+  }
+}
+.btn-submit {
+  padding: 15px 40px;
+  background: $yellow;
+  border: none;
+  border-radius: 5px;
+  font-size: 20px;
+  color: $white;
+}
+.contact-tabs {
+  & ul {
+    margin-bottom: 30px;
+    position: relative;
+    & .nav-item {
+      & .nav-link {
+        // display: block;
+        background: transparent;
+        border: none;
+        padding: 15px 0;
+        margin-right: 20px;
+        font-size: 1.5rem;
+        font-weight: 600;
+        color: $dark;
+        &.active {
+          color: $yellow;
+        }
+      }
+    }
+    
+  }
+}
+.nav-tabs {
+  & .line {
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    width: 0;
+    height: 4px;
+    border-radius: 15px;
+    background-color: $yellow;
+    transition: all 0.2s ease;
+  }
+}
+.nav-link {
+  cursor: pointer;
+}
+.tab-pane {
+  display: none;
+  &.active {
+    display: block;
+  }
+  & ul {
+    & li {
+      display: flex;
+      align-items: center;
+      margin-bottom: 30px;
+    }
+  }
+}
+.icon {
+  & i {
+    color: $yellow;
+    display: inline-block;
+    font-size: 30px;
+    height: 80px;
+    width: 80px;
+    text-align: center;
+    line-height: 80px;
+    background: #ffffff;
+    border-radius: 63% 37% 30% 70% / 50% 45% 55% 50%;
+    margin-right: 20px;
+    box-shadow: 0 5px 30px 0 rgb(214 215 216 / 57%);
+  }
+}
+#tab2 {
+  & iframe {
+    width: 100%;
+    height: 360px;
   }
 }
