--- a/assets/sass/_header.scss
+++ b/assets/sass/_header.scss
@@ -1,4 +1,5 @@
 .full-width-header {
+  position: relative;
   & .rs-header {
     position: fixed;
     z-index: 3;
@@ -52,6 +53,9 @@
     }
   }
 }
+.nav-toggle {
+  display: none;
+}
 canvas {
   display: block;
   position: absolute;
@@ -62,6 +66,10 @@ canvas {
   & img {
     width: 100%;
     height: 950px;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+
   }
 }
 .slider-content {
@@ -124,4 +132,131 @@ canvas {
   &:hover {
     background: $yellow;
   }
+}
+.nav-toggle {
+  float: right;
+  margin-top: 16px;
+  height: 46px;
+  width: 66px;
+  background: none;
+  cursor: pointer;
+  border: none;
+  & span {
+    height: 2px;
+    width: 30px;
+    background: $dark;
+    display: block;
+    margin: auto;
+    position: relative;
+    -webkit-transition: all 0.3s ease;
+    -o-transition: all 0.3s ease;
+    transition: all 0.3s ease;
+    &::before {
+      content: "";
+      position: absolute;
+      left: 0;
+      top: -12px;
+      margin: auto;
+      width: 100%;
+      height: 100%;
+      background: $dark;
+    }
+    &::after {
+      content: "";
+      position: absolute;
+      left: 0;
+      top: 12px;
+      margin: auto;
+      width: 100%;
+      height: 100%;
+      background: $dark;
+    }
+  }
+}
+@media only screen and (max-width: 1440px) {
+  .rs-menu {
+    padding-right: 0;
+  }
+  .nav-menu li a {
+    padding: 15px 30px 15px;
+  }
+}
+@media only screen and (min-width: 740px) and (max-width: 1025px) {
+  .rs-menu {
+    display: none;
+  }
+  .nav-toggle {
+    display: block;
+    float: right;
+    margin-top: 16px;
+    height: 46px;
+    width: 66px;
+    background: none;
+    cursor: pointer;
+    border: none;
+    & span {
+      height: 2px;
+      width: 30px;
+      background: $dark;
+      display: block;
+      margin: auto;
+      position: relative;
+      -webkit-transition: all 0.3s ease;
+      -o-transition: all 0.3s ease;
+      transition: all 0.3s ease;
+      &::before {
+        content: "";
+        position: absolute;
+        left: 0;
+        top: -12px;
+        margin: auto;
+        width: 100%;
+        height: 100%;
+        background: $dark;
+      }
+      &::after {
+        content: "";
+        position: absolute;
+        left: 0;
+        top: 12px;
+        margin: auto;
+        width: 100%;
+        height: 100%;
+        background: $dark;
+      }
+    }
+  }
+  .info-box {
+    padding: 25px 0 25px 20px;
+    & i {
+      margin-right: 12px;
+    }
+  }
+}
+@media only screen and (max-width: 739px) {
+  .rs-menu {
+    display: none;
+  }
+  .display-table-cell {
+    & h1 {
+      font-size: 40px;
+    }
+  }
+  .info-content {
+    margin-top: 0;
+  }
+  .nav-toggle {
+    display: block;
+  }
+  .header-box {
+    width: 50%;
+  }
+
+  .display-table-cell {
+    & a {
+      &:nth-of-type(2) {
+        margin-left: 0 !important;
+      }
+    }
+  } 
 }
