--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -48,6 +48,9 @@ section[id] {
   scroll-margin-top: 30px;
 }
 
+.full-width-header {
+  position: relative;
+}
 .full-width-header .rs-header {
   position: fixed;
   z-index: 3;
@@ -99,6 +102,10 @@ section[id] {
   font-weight: 600;
 }
 
+.nav-toggle {
+  display: none;
+}
+
 canvas {
   display: block;
   position: absolute;
@@ -111,6 +118,9 @@ canvas {
 .slider-area img {
   width: 100%;
   height: 950px;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
 .slider-content {
@@ -173,9 +183,143 @@ canvas {
   background: #ffab00;
 }
 
+.nav-toggle {
+  float: right;
+  margin-top: 16px;
+  height: 46px;
+  width: 66px;
+  background: none;
+  cursor: pointer;
+  border: none;
+}
+.nav-toggle span {
+  height: 2px;
+  width: 30px;
+  background: #1c1c1d;
+  display: block;
+  margin: auto;
+  position: relative;
+  -webkit-transition: all 0.3s ease;
+  -o-transition: all 0.3s ease;
+  transition: all 0.3s ease;
+}
+.nav-toggle span::before {
+  content: "";
+  position: absolute;
+  left: 0;
+  top: -12px;
+  margin: auto;
+  width: 100%;
+  height: 100%;
+  background: #1c1c1d;
+}
+.nav-toggle span::after {
+  content: "";
+  position: absolute;
+  left: 0;
+  top: 12px;
+  margin: auto;
+  width: 100%;
+  height: 100%;
+  background: #1c1c1d;
+}
+
+@media only screen and (max-width: 1440px) {
+  .rs-menu {
+    padding-right: 0;
+  }
+
+  .nav-menu li a {
+    padding: 15px 30px 15px;
+  }
+}
+@media only screen and (min-width: 740px) and (max-width: 1025px) {
+  .rs-menu {
+    display: none;
+  }
+
+  .nav-toggle {
+    display: block;
+    float: right;
+    margin-top: 16px;
+    height: 46px;
+    width: 66px;
+    background: none;
+    cursor: pointer;
+    border: none;
+  }
+  .nav-toggle span {
+    height: 2px;
+    width: 30px;
+    background: #1c1c1d;
+    display: block;
+    margin: auto;
+    position: relative;
+    -webkit-transition: all 0.3s ease;
+    -o-transition: all 0.3s ease;
+    transition: all 0.3s ease;
+  }
+  .nav-toggle span::before {
+    content: "";
+    position: absolute;
+    left: 0;
+    top: -12px;
+    margin: auto;
+    width: 100%;
+    height: 100%;
+    background: #1c1c1d;
+  }
+  .nav-toggle span::after {
+    content: "";
+    position: absolute;
+    left: 0;
+    top: 12px;
+    margin: auto;
+    width: 100%;
+    height: 100%;
+    background: #1c1c1d;
+  }
+
+  .info-box {
+    padding: 25px 0 25px 20px;
+  }
+  .info-box i {
+    margin-right: 12px;
+  }
+}
+@media only screen and (max-width: 739px) {
+  .rs-menu {
+    display: none;
+  }
+
+  .display-table-cell h1 {
+    font-size: 40px;
+  }
+
+  .info-content {
+    margin-top: 0;
+  }
+
+  .nav-toggle {
+    display: block;
+  }
+
+  .header-box {
+    width: 50%;
+  }
+
+  .display-table-cell a:nth-of-type(2) {
+    margin-left: 0 !important;
+  }
+}
 #about-us {
   padding: 250px 0;
   position: relative;
+}
+
+.about-content {
+  display: flex;
+  gap: 100px;
 }
 
 .about-left {
@@ -308,6 +452,65 @@ canvas {
   display: block;
 }
 
+@media only screen and (max-width: 1440px) {
+  .about-content {
+    display: flex;
+    gap: 100px;
+  }
+}
+@media only screen and (min-width: 740px) and (max-width: 1025px) {
+  #about-us {
+    padding: 150px 0;
+  }
+
+  .about-content {
+    gap: 0;
+  }
+
+  .about-left {
+    width: 100%;
+  }
+
+  .team-img {
+    display: none;
+  }
+
+  .circle-img {
+    display: none;
+  }
+
+  .service-box {
+    row-gap: 24px;
+  }
+}
+@media only screen and (max-width: 739px) {
+  #about-us {
+    padding: 150px 0;
+  }
+
+  .video-player {
+    width: 80%;
+  }
+  .video-player iframe {
+    height: 440px;
+  }
+
+  .team-img {
+    display: none;
+  }
+
+  .circle-img {
+    display: none;
+  }
+
+  .about-left {
+    width: 100%;
+  }
+
+  .about-content {
+    gap: 0;
+  }
+}
 #services-area {
   padding: 150px 0;
   background-color: #f8f8f8;
@@ -383,6 +586,11 @@ canvas {
   z-index: -1;
 }
 
+@media only screen and (max-width: 739px) {
+  .service-box {
+    row-gap: 20px;
+  }
+}
 .block-content {
   width: 100%;
   height: 900px;
@@ -436,6 +644,39 @@ canvas {
   color: #2d2d2d;
 }
 
+@media only screen and (min-width: 740px) and (max-width: 1025px) {
+  .block-content {
+    width: 100%;
+    height: 950px;
+  }
+
+  .heading-title {
+    padding-top: 100px;
+  }
+
+  .services-wrapper {
+    padding: 10px 20px;
+  }
+}
+@media only screen and (max-width: 739px) {
+  .block-content {
+    width: 100%;
+    height: 1600px;
+  }
+
+  .services-wrapper {
+    width: 100%;
+    padding: 10px;
+  }
+
+  .heading-title {
+    padding-top: 50px;
+  }
+
+  .block-content-box {
+    row-gap: 24px;
+  }
+}
 #strengths {
   padding: 145px 0;
 }
@@ -550,6 +791,36 @@ canvas {
   padding-bottom: 20px;
 }
 
+@media only screen and (min-width: 740px) and (max-width: 1025px) {
+  .timetab-data .timetab-container .timetab-img {
+    margin-left: 0;
+    width: 100%;
+    height: 380px;
+  }
+
+  .strengths-box {
+    row-gap: 24px;
+  }
+
+  .technology-box {
+    row-gap: 24px;
+  }
+}
+@media only screen and (max-width: 739px) {
+  #strengths {
+    padding-bottom: 100px;
+  }
+
+  .strengths-box {
+    row-gap: 24px;
+  }
+
+  .timetab-data .timetab-container .timetab-img {
+    width: 100%;
+    height: 100%;
+    margin-left: 0;
+  }
+}
 #technology {
   padding-top: 50px;
   padding-bottom: 150px;
@@ -565,6 +836,15 @@ canvas {
   width: 80%;
 }
 
+@media only screen and (max-width: 739px) {
+  #technology {
+    padding-bottom: 50px;
+  }
+
+  .technology-box {
+    row-gap: 24px;
+  }
+}
 #contacts {
   padding-top: 150px;
   padding-bottom: 150px;
@@ -672,6 +952,81 @@ canvas {
 #tab2 iframe {
   width: 100%;
   height: 360px;
+}
+
+@media only screen and (min-width: 740px) and (max-width: 1025px) {
+  .contacts-box {
+    row-gap: 24px;
+  }
+}
+@media only screen and (max-width: 739px) {
+  #contacts {
+    padding-top: 100px;
+    padding-bottom: 50px;
+  }
+
+  .contacts-box {
+    row-gap: 24px;
+  }
+}
+#footer {
+  padding-bottom: 100px;
+}
+
+.footer-items {
+  padding-top: 100px;
+}
+.footer-items .footer-about p {
+  font-weight: 600;
+}
+.footer-items .footer-about img {
+  max-width: 100%;
+}
+.footer-items .footer-about .footer-social {
+  margin-top: 25px;
+  text-align: center;
+}
+.footer-items .footer-about .footer-social a {
+  margin-right: 25px;
+  text-decoration: none;
+  color: #ffab00;
+}
+.footer-items .footer-about .footer-social a i {
+  font-size: 30px;
+}
+
+.footer-item {
+  padding-left: 30px;
+}
+
+.widget-title {
+  font-weight: 600;
+}
+
+.address ul {
+  padding-left: 0;
+  margin-top: 20px;
+}
+.address ul li {
+  padding-bottom: 20px;
+}
+.address ul li strong {
+  font-size: 20px;
+}
+.address ul li p {
+  display: inline-block;
+  font-weight: 500;
+}
+
+.footer-link p {
+  margin-top: 20px;
+  font-weight: 500;
+}
+
+@media only screen and (max-width: 739px) {
+  .footer-link {
+    padding-left: 32px;
+  }
 }
 
 /*# sourceMappingURL=style.css.map */
