--- a/assets/sass/_block-content.scss
+++ b/assets/sass/_block-content.scss
@@ -49,3 +49,33 @@
     color: #2d2d2d;
   }
 }
+
+@media only screen and (min-width: 740px) and (max-width: 1025px) {
+  .block-content {
+    width: 100%;
+    height: 950px;
+  }
+  .heading-title {
+    padding-top: 100px;
+  }
+
+  .services-wrapper {
+    padding: 10px 20px;
+  }
+}
+@media only screen and (max-width: 739px) {
+  .block-content {
+    width: 100%;
+    height: 1600px;
+}
+  .services-wrapper {
+    width: 100%;
+    padding: 10px;
+  }
+  .heading-title {
+    padding-top: 50px;
+  }
+  .block-content-box {
+    row-gap: 24px;
+  }
+}
