--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -106,21 +106,22 @@ section[id] {
   display: none;
 }
 
-canvas {
-  display: block;
-  position: absolute;
-}
-
 .slider-area {
   position: relative;
   top: 0;
+  max-width: 100%;
+  margin: auto;
 }
-.slider-area img {
+.slider-area .mySlider {
+  display: none;
+}
+.slider-area .mySlider img {
   width: 100%;
   height: 950px;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
+  vertical-align: middle;
 }
 
 .slider-content {
@@ -456,6 +457,10 @@ canvas {
   .about-content {
     display: flex;
     gap: 100px;
+  }
+
+  .circle-img {
+    left: 60px;
   }
 }
 @media only screen and (min-width: 740px) and (max-width: 1025px) {
